--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+  {% seo %}
   </head>
 
   <body>
@@ -27,8 +28,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/resume_savita.pdf">Resume</a>
+            <a href="{{ site.baseurl }}/research">Research</a>
+            <a href="{{ site.baseurl }}/projects">Projects</a>
           </nav>
         </header>
       </div>
